Fix heights and scrollbar for sections

--- a/scss/brand/_brand.scss
+++ b/scss/brand/_brand.scss
@@ -1,9 +1,13 @@
 .brand {
   @include container(5);
-  margin-top: 60px;
-  margin-bottom: 60px;
+  @include background("brand-background.png", cover);
+  background-repeat: no-repeat;
+
+  height: 100vh;
+  position: relative;
 
   &__content {
+    @include block-vertical-align();
     min-height: 385px;
 
     &>div {
