--- a/scss/location/_location.scss
+++ b/scss/location/_location.scss
@@ -2,8 +2,11 @@
   @include container(8);
   @include pad(1);
 
+  @include background("brand-background.png", cover);
+  background-repeat: no-repeat;
+
   height: 100vh;
-  margin-bottom: 60px;
+  position: relative;
 
   &__content {
     @include vertical-align();
